gcp-deploy/argocd/old/flask_app/templates/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: flask-app
spec:
  ingressClassName: nginx
  rules:
    - host: tsorefdaniel.42web.io
    -  http:
        paths:
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
